--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand"
-  },
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js",
+  "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
+  "test:integration": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand --config jest.integration.config.js"
+},
+
   "dependencies": {
     "@supabase/supabase-js": "^2.93.3",
     "cors": "^2.8.6",
